--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,7 @@
     <plugins>
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
-        <version>6.1.7</version>
+        <artifactId>jetty-maven-plugin</artifactId>
         <configuration>
           <connectors>
             <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
@@ -65,6 +64,14 @@
       <artifactId>[the artifact id of the block to be mounted]</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency-->
+
+    <!-- https://mvnrepository.com/artifact/org.eclipse.jetty.aggregate/jetty-all -->
+    <dependency>
+      <groupId>org.eclipse.jetty.aggregate</groupId>
+      <artifactId>jetty-all</artifactId>
+      <version>9.4.5.v20180619</version>
+      <type>pom</type>
+    </dependency>
 
     <!-- jstl标签 -->
     <dependency>
@@ -177,6 +184,11 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>4.3.5.RELEASE</version>
     </dependency>
 
   </dependencies>
