--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <artifactId>maven-parent</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <build>
+  <!--build>
     <plugins>
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
@@ -45,7 +45,22 @@
         </configuration>
       </plugin>
     </plugins>
+  </build-->
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
+
 
   <properties>
     <!-- 设置项目编码编码 -->
@@ -91,6 +106,7 @@
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
       <version>7.0</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- 单元测试 -->
@@ -152,13 +168,8 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>${spring.version}</version>
+      <version>4.3.5.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -173,7 +184,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>${spring.version}</version>
+      <version>4.3.5.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -187,9 +198,21 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
+      <artifactId>spring-beans</artifactId>
       <version>4.3.5.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>javax.servlet.jsp</groupId>-->
+      <!--<artifactId>jsp-api</artifactId>-->
+      <!--<version>3.1.0</version>-->
+      <!--<scope>provided</scope>-->
+    <!--</dependency>-->
 
   </dependencies>
 
