--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,96 +32,74 @@
 
     <!-- Servlet Filters ================================================ -->
 
-    <!--
-      - Declare a filter for multipart MIME handling
-      -->
+    <display-name>Archetype Created Web Application</display-name>
+    <!--spring和mybatis的配置文件-->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:/config/spring-mybatis.xml</param-value>
+    </context-param>
+
+    <!-- 日志记录 -->
+    <context-param>
+        <!-- 日志配置文件路径 -->
+        <param-name>log4jConfigLocation</param-name>
+        <param-value>classpath:config/log4j.properties</param-value>
+    </context-param>
+    <context-param>
+        <param-name>log4jRefreshInterval</param-name>
+        <param-value>60000</param-value>
+    </context-param>
+
+    <!-- Spring字符集过滤器 -->
     <filter>
-        <description>Multipart MIME handling filter for Cocoon</description>
-        <display-name>Cocoon multipart filter</display-name>
-        <filter-name>CocoonMultipartFilter</filter-name>
-        <filter-class>org.apache.cocoon.servlet.multipart.MultipartFilter</filter-class>
+        <filter-name>SpringEncodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
     </filter>
-
-
-    <!--
-      - Declare a filter for debugging incoming request
-      -->
-    <filter>
-        <description>Log debug information about each request</description>
-        <display-name>Cocoon debug filter</display-name>
-        <filter-name>CocoonDebugFilter</filter-name>
-        <filter-class>org.apache.cocoon.servlet.DebugFilter</filter-class>
-    </filter>
-
-    <!-- Filter mappings ================================================ -->
-
-    <!--
-      - Use the Cocoon multipart filter together with the Cocoon demo webapp
-      -->
     <filter-mapping>
-        <filter-name>CocoonMultipartFilter</filter-name>
-        <servlet-name>Cocoon</servlet-name>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>CocoonMultipartFilter</filter-name>
-        <servlet-name>DispatcherServlet</servlet-name>
+        <filter-name>SpringEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!--
-      - Use the Cocoon debug filter together with the Cocoon demo webapp
-    <filter-mapping>
-      <filter-name>CocoonDebugFilter</filter-name>
-      <servlet-name>Cocoon</servlet-name>
-    </filter-mapping>
-      -->
-
-    <!-- Servlet Context Listener ======================================= -->
-
-    <!--
-      - Declare Spring context listener which sets up the Spring Application Context
-      - containing all Cocoon components (and user defined beans as well).
-      -->
+    <!--spring监听器-->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-
-    <!--
-      - Declare Spring request listener which sets up the required RequestAttributes
-      - to support Springs and Cocoon custom bean scopes like the request scope or the
-      - session scope.
-      -->
+    <!--防止spring内存溢出监听器-->
     <listener>
-        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-    </listener>
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+        <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
     </listener>
 
-    <!-- Servlet Configuration ========================================== -->
-
-    <!--
-      - Servlet that dispatches requests to the Spring managed block servlets
-      -->
+    <!-- springMVC核心配置 -->
     <servlet>
-        <description>Cocoon blocks dispatcher</description>
-        <display-name>DispatcherServlet</display-name>
-        <servlet-name>DispatcherServlet</servlet-name>
-        <servlet-class>org.apache.cocoon.servletservice.DispatcherServlet</servlet-class>
+        <servlet-name>spring</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>
+                classpath:config/spring-mvc.xml
+            </param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-
-    <!-- URL space mappings ============================================= -->
-
-    <!--
-      - Cocoon handles all the URL space assigned to the webapp using its sitemap.
-      - It is recommended to leave it unchanged. Under some circumstances though
-      - (like integration with proprietary webapps or servlets) you might have
-      - to change this parameter.
-      -->
     <servlet-mapping>
-        <servlet-name>DispatcherServlet</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <servlet-name>spring</servlet-name>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <!--需要访问js文件时使用-->
+    <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.js</url-pattern>
+    </servlet-mapping>
+
 
 </web-app>
         
