--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
     </dependencies>
 
     <build>
-        <finalName>SSMDemo</finalName>
+        <finalName>maven-parent</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
