--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.driver=com.mysql.cj.jdbc.Driver
 #数据库地址
-jdbc.url=jdbc:mysql://127.0.0.1:3306/nikll?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/nikll?useSSL=false&serverTimezone=UTC
 #用户名
 jdbc.username=root
 #密码
