--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,105 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Licensed to the Apache Software Foundation (ASF) under one or more
-  contributor license agreements.  See the NOTICE file distributed with
-  this work for additional information regarding copyright ownership.
-  The ASF licenses this file to You under the Apache License, Version 2.0
-  (the "License"); you may not use this file except in compliance with
-  the License.  You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
-
-<!--
-  - This is the Cocoon web-app configurations file
-  -
-  - $Id$
-  -->
-<web-app version="2.4"
-         xmlns="http://java.sun.com/xml/ns/j2ee"
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/views/editStudent.jsp</param-value>
-    </context-param>
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
 
-    <!-- Servlet Filters ================================================ -->
-
-    <display-name>Archetype Created Web Application</display-name>
-    <!--spring和mybatis的配置文件-->
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:/config/spring-mybatis.xml</param-value>
-    </context-param>
-
-    <!-- 日志记录 -->
-    <context-param>
-        <!-- 日志配置文件路径 -->
-        <param-name>log4jConfigLocation</param-name>
-        <param-value>classpath:config/log4j.properties</param-value>
-    </context-param>
-    <context-param>
-        <param-name>log4jRefreshInterval</param-name>
-        <param-value>60000</param-value>
-    </context-param>
-
-    <!-- Spring字符集过滤器 -->
+    <!-- 编码过滤器 -->
     <filter>
-        <filter-name>SpringEncodingFilter</filter-name>
+        <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
         <init-param>
             <param-name>encoding</param-name>
             <param-value>UTF-8</param-value>
         </init-param>
-        <init-param>
-            <param-name>forceEncoding</param-name>
-            <param-value>true</param-value>
-        </init-param>
     </filter>
     <filter-mapping>
-        <filter-name>SpringEncodingFilter</filter-name>
+        <filter-name>encodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!--spring监听器-->
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-    <!--防止spring内存溢出监听器-->
-    <listener>
-        <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
-    </listener>
-
-    <!-- springMVC核心配置 -->
+    <!-- 配置DispatcherServlet -->
     <servlet>
-        <servlet-name>spring</servlet-name>
+        <servlet-name>SpringMVC</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <!-- 配置springMVC需要加载的配置文件-->
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>
-                classpath:config/spring-mvc.xml
-            </param-value>
+            <param-value>classpath:config/spring-*.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
+        <async-supported>true</async-supported>
     </servlet>
     <servlet-mapping>
-        <servlet-name>spring</servlet-name>
+        <servlet-name>SpringMVC</servlet-name>
+        <!-- 匹配所有请求 -->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <!--需要访问js文件时使用-->
-    <servlet-mapping>
-    <servlet-name>default</servlet-name>
-    <url-pattern>*.js</url-pattern>
-    </servlet-mapping>
-
-
 </web-app>
-        
